--- a/.vim/c-support/templates/c.preprocessor.template
+++ b/.vim/c-support/templates/c.preprocessor.template
@@ -1,4 +1,10 @@
 $-------------------------------------------------------------------------
+== preprocessor.include-global ==
+#include	<<CURSOR>>
+$-------------------------------------------------------------------------
+== preprocessor.include-local ==
+#include	"<CURSOR>"
+$-------------------------------------------------------------------------
 == preprocessor.define ==
 #define	<CURSOR>			/*  */
 $-------------------------------------------------------------------------
@@ -9,21 +15,21 @@ $-------------------------------------------------------------------------
 #if  |?CONDITION:u|
 <CURSOR><SPLIT>
 #else      /* -----  not |CONDITION|  ----- */
-
+<+ELSE PART+>
 #endif     /* -----  not |CONDITION|  ----- */
 $-------------------------------------------------------------------------
 == preprocessor.ifdef-else-endif ==
 #ifdef  |?CONDITION:u|
 <CURSOR><SPLIT>
 #else      /* -----  not |CONDITION|  ----- */
-
+<+ELSE PART+>
 #endif     /* -----  not |CONDITION|  ----- */
 $-------------------------------------------------------------------------
 == preprocessor.ifndef-else-endif ==
 #ifndef  |?CONDITION:u|
 <CURSOR><SPLIT>
 #else      /* -----  not |CONDITION|  ----- */
-
+<+ELSE PART+>
 #endif     /* -----  not |CONDITION|  ----- */
 $-------------------------------------------------------------------------
 == preprocessor.ifndef-def-endif ==
@@ -31,4 +37,13 @@ $-------------------------------------------------------------------------
 #define  |BASENAME|_INC
 <CURSOR><SPLIT>
 #endif   /* ----- #ifndef |BASENAME|_INC  ----- */
+$-------------------------------------------------------------------------
+== preprocessor.error ==
+#error	"<CURSOR>"			/*  */
+$-------------------------------------------------------------------------
+== preprocessor.line ==
+#line	<CURSOR>			/*  */
+$-------------------------------------------------------------------------
+== preprocessor.pragma ==
+#pragma	<CURSOR>			/*  */
 $-------------------------------------------------------------------------
