--- a/.vim/c-support/templates/c.statements.template
+++ b/.vim/c-support/templates/c.statements.template
@@ -15,7 +15,8 @@ if ( <CURSOR> )
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.if-block ==
 if ( <CURSOR> ) {
-<SPLIT>}
+<SPLIT><-IF PART->
+}
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.if-else ==
 if ( <CURSOR> )
@@ -23,8 +24,15 @@ if ( <CURSOR> )
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.if-block-else ==
 if ( <CURSOR> ) {
-<SPLIT>} else {
+<SPLIT><-IF PART->
 }
+else {
+<+ELSE PART+>
+}
+$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+== statements.else-block ==
+else {<CURSOR>
+<SPLIT>}
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.while ==
 while ( <CURSOR> )
@@ -35,16 +43,16 @@ while ( <CURSOR> ) {
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == statements.switch ==
 switch ( <CURSOR> ) {
-	case :	
+	case 1:	
 		<SPLIT>break;
 
-	case :	
+	case 2:	
 		break;
 
-	case :	
+	case 3:	
 		break;
 
-	case :	
+	case 4:	
 		break;
 
 	default:	
