--- a/.vim/c-support/templates/cpp.cpp.template
+++ b/.vim/c-support/templates/cpp.cpp.template
@@ -1,12 +1,88 @@
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+$
+== cpp.cin ==
+cin	>> <CURSOR>;
+$
+== cpp.cout ==
+cout	<< <CURSOR> << endl;
+$
+== cpp.cout-operator == insert ==
+<< "<CURSOR>" 
+$
+$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+== cpp.output-manipulator-boolalpha       == insert ==
+<< boolalpha <CURSOR>
+== cpp.output-manipulator-dec             == insert ==
+<< dec <CURSOR>
+== cpp.output-manipulator-endl            == insert ==
+<< endl <CURSOR>
+== cpp.output-manipulator-fixed           == insert ==
+<< fixed <CURSOR>
+== cpp.output-manipulator-flush           == insert ==
+<< flush <CURSOR>
+== cpp.output-manipulator-hex             == insert ==
+<< hex <CURSOR>
+== cpp.output-manipulator-internal        == insert ==
+<< internal <CURSOR>
+== cpp.output-manipulator-left            == insert ==
+<< left <CURSOR>
+== cpp.output-manipulator-oct             == insert ==
+<< oct <CURSOR>
+== cpp.output-manipulator-right           == insert ==
+<< right <CURSOR>
+== cpp.output-manipulator-scientific      == insert ==
+<< scientific <CURSOR>
+== cpp.output-manipulator-setbase         == insert ==
+<< setbase(10<CURSOR>) 
+== cpp.output-manipulator-setfill         == insert ==
+<< setfill(<CURSOR>) 
+== cpp.output-manipulator-setiosflag      == insert ==
+<< setiosflags(<CURSOR>) 
+== cpp.output-manipulator-setprecision    == insert ==
+<< setprecision(6<CURSOR>) 
+== cpp.output-manipulator-setw            == insert ==
+<< setw(0<CURSOR>) 
+== cpp.output-manipulator-showbase        == insert ==
+<< showbase <CURSOR>
+== cpp.output-manipulator-showpoint       == insert ==
+<< showpoint <CURSOR>
+== cpp.output-manipulator-showpos         == insert ==
+<< showpos <CURSOR>
+== cpp.output-manipulator-uppercase       == insert ==
+<< uppercase <CURSOR>
+$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == cpp.method-implementation ==
-<CURSOR>void
-|?CLASSNAME|::|?METHODNAME| (  )
+void<CURSOR>
+|?CLASSNAME|::|?METHODNAME| ( <+argument list+> )
 {
 	return ;
 }		// -----  end of method |CLASSNAME|::|METHODNAME|  -----
+
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== cpp.class ==
+== cpp.accessor-implementation ==
+//--------------------------------------------------------------------------------------
+//       Class:  |?CLASSNAME|
+//      Method:  get_|?ATTRIBUTE|
+//--------------------------------------------------------------------------------------
+inline int<CURSOR>
+|CLASSNAME|::get_|ATTRIBUTE| (  )
+{
+	return |ATTRIBUTE|;
+}		// -----  end of method |CLASSNAME|::get_|ATTRIBUTE|  -----
+
+//--------------------------------------------------------------------------------------
+//       Class:  |CLASSNAME|
+//      Method:  set_|ATTRIBUTE|
+//--------------------------------------------------------------------------------------
+inline void
+|CLASSNAME|::set_|ATTRIBUTE| ( <+argument list+> )
+{
+	|ATTRIBUTE|	= value;
+	return ;
+}		// -----  end of method |CLASSNAME|::set_|ATTRIBUTE|  -----
+
+$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+== cpp.class-definition ==
 // =====================================================================================
 //        Class:  |?CLASSNAME:c|
 //  Description:  <CURSOR>
@@ -18,32 +94,32 @@ class |CLASSNAME|
     // ====================  LIFECYCLE     =======================================
     |CLASSNAME| ();                             // constructor
 
-    // ====================  OPERATORS     =======================================
+		// ====================  ACCESSORS     =======================================
 
-    // ====================  OPERATIONS    =======================================
+		// ====================  MUTATORS      =======================================
 
-    // ====================  ACCESS        =======================================
-
-    // ====================  INQUIRY       =======================================
+		// ====================  OPERATORS     =======================================
 
     // ====================  DATA MEMBERS  =======================================
   protected:
 
   private:
 
-}; // -----  end of class  |CLASSNAME|  -----
+}; // -----  end of class |CLASSNAME|  -----
 
+$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+== cpp.class-implementation ==
 //--------------------------------------------------------------------------------------
-//       Class:  |CLASSNAME|
+//       Class:  |?CLASSNAME|
 //      Method:  |CLASSNAME|
 // Description:  constructor
 //--------------------------------------------------------------------------------------
 |CLASSNAME|::|CLASSNAME| ()
-{
+{<CURSOR>
 }  // -----  end of method |CLASSNAME|::|CLASSNAME|  (constructor)  -----
 
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== cpp.class-using-new ==
+== cpp.class-using-new-definition ==
 // =====================================================================================
 //        Class:  |?CLASSNAME:c|
 //  Description:  <CURSOR>
@@ -57,29 +133,32 @@ class |CLASSNAME|
     |CLASSNAME| ( const |CLASSNAME| &other );   // copy constructor
     ~|CLASSNAME| ();                            // destructor
 
+		// ====================  ACCESSORS     =======================================
+
+		// ====================  MUTATORS      =======================================
+
+		// ====================  OPERATORS     =======================================
+
     // ====================  OPERATORS     =======================================
+
     const |CLASSNAME|& operator = ( const |CLASSNAME| &other ); // assignment operator
-
-    // ====================  OPERATIONS    =======================================
-
-    // ====================  ACCESS        =======================================
-
-    // ====================  INQUIRY       =======================================
 
     // ====================  DATA MEMBERS  =======================================
   protected:
 
   private:
 
-}; // -----  end of class  |CLASSNAME|  -----
+}; // -----  end of class |CLASSNAME|  -----
 
+$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+== cpp.class-using-new-implementation ==
 //--------------------------------------------------------------------------------------
-//       Class:  |CLASSNAME|
+//       Class:  |?CLASSNAME|
 //      Method:  |CLASSNAME|
 // Description:  constructor
 //--------------------------------------------------------------------------------------
 |CLASSNAME|::|CLASSNAME| ()
-{
+{<CURSOR>
 }  // -----  end of method |CLASSNAME|::|CLASSNAME|  (constructor)  -----
 
 //--------------------------------------------------------------------------------------
@@ -121,21 +200,43 @@ $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 // =====================================================================================
 class |CLASSNAME|
 {
-  public:              |CLASSNAME| ( char *msg ):message(msg)  { }
-              virtual ~|CLASSNAME| ( )                         { }
-              virtual const char* what ( ) const throw ( )    { return message; }
-  protected:  char  *message;
-}; // ----------  end of class  |CLASSNAME|  ----------
+  public:     |CLASSNAME| ( string msg = "|CLASSNAME|" ):message(msg)  { }
+              virtual ~|CLASSNAME| ( )  { }
+              virtual string what ( ) const throw ( )  { return message; }
+  protected:  string  message;
+}; // ----------  end of class |CLASSNAME|  ----------
 
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == cpp.template-method-implementation ==
 template < class T >
-void<CURSOR> |?CLASSNAME|<T>::|?METHODNAME| (  )
+void<CURSOR> |?CLASSNAME|<T>::|?METHODNAME| ( <+argument list+> )
 {
 	return ;
 }		// -----  end of method |CLASSNAME|<T>::|METHODNAME|  -----
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== cpp.template-class ==
+== cpp.template-accessor-implementation ==
+//--------------------------------------------------------------------------------------
+//       Class:  |?CLASSNAME|
+//      Method:  get_|?ATTRIBUTE|
+//--------------------------------------------------------------------------------------
+template < class T >
+inline  int<CURSOR> |CLASSNAME|<T>::get_|ATTRIBUTE| (  )
+{
+	return |ATTRIBUTE|;
+}		// -----  end of method |CLASSNAME|<T>::get_|ATTRIBUTE|  -----
+
+//--------------------------------------------------------------------------------------
+//       Class:  |CLASSNAME|
+//      Method:  set_|ATTRIBUTE|
+//--------------------------------------------------------------------------------------
+template < class T >
+inline  void |CLASSNAME|<T>::set_|ATTRIBUTE| ( <+argument list+> )
+{
+	|ATTRIBUTE|	= value;
+	return ;
+}		// -----  end of method |CLASSNAME|<T>::set_|ATTRIBUTE|  -----
+$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+== cpp.template-class-definition ==
 // =====================================================================================
 //        Class:  |?CLASSNAME:c|
 //  Description:  <CURSOR>
@@ -149,33 +250,33 @@ class |CLASSNAME|
     // ====================  LIFECYCLE     =======================================
     |CLASSNAME| ();                             // constructor
 
-    // ====================  OPERATORS     =======================================
+		// ====================  ACCESSORS     =======================================
 
-    // ====================  OPERATIONS    =======================================
+		// ====================  MUTATORS      =======================================
 
-    // ====================  ACCESS        =======================================
-
-    // ====================  INQUIRY       =======================================
+		// ====================  OPERATORS     =======================================
 
     // ====================  DATA MEMBERS  =======================================
   protected:
 
   private:
 
-}; // -----  end of template class  |CLASSNAME|  -----
+}; // -----  end of template class |CLASSNAME|  -----
 
+$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+== cpp.template-class-implementation ==
 //--------------------------------------------------------------------------------------
-//       Class:  |CLASSNAME|
+//       Class:  |?CLASSNAME|
 //      Method:  |CLASSNAME|
 // Description:  constructor
 //--------------------------------------------------------------------------------------
 template < class T >
 |CLASSNAME| <T>:: |CLASSNAME| ()
-{
+{<CURSOR>
 }  // -----  end of constructor of template class |CLASSNAME|  -----
 
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-== cpp.template-class-using-new ==
+== cpp.template-class-using-new-definition ==
 // =====================================================================================
 //        Class:  |?CLASSNAME:c|
 //  Description:  <CURSOR>
@@ -191,25 +292,25 @@ class |CLASSNAME|
     |CLASSNAME| ( const |CLASSNAME| &other ); // copy constructor
     ~|CLASSNAME| ();                          // destructor
 
-    // ====================  OPERATORS     =======================================
+		// ====================  ACCESSORS     =======================================
+
+		// ====================  MUTATORS      =======================================
+
+		// ====================  OPERATORS     =======================================
 
     const |CLASSNAME|& operator = ( const |CLASSNAME| &other ); // assignment operator
-
-    // ====================  OPERATIONS    =======================================
-
-    // ====================  ACCESS        =======================================
-
-    // ====================  INQUIRY       =======================================
 
     // ====================  DATA MEMBERS  =======================================
   protected:
 
   private:
 
-}; // -----  end of template class  |CLASSNAME|  -----
+}; // -----  end of template class |CLASSNAME|  -----
 
+$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+== cpp.template-class-using-new-implementation ==
 //--------------------------------------------------------------------------------------
-//       Class:  |CLASSNAME|
+//       Class:  |?CLASSNAME|
 //      Method:  |CLASSNAME|
 // Description:  constructor
 //--------------------------------------------------------------------------------------
@@ -225,7 +326,7 @@ template < class T >
 //--------------------------------------------------------------------------------------
 template < class T >
 |CLASSNAME|<T>::|CLASSNAME| ( const |CLASSNAME| &other )
-{
+{<CURSOR>
 }  // -----  end of copy constructor of template class |CLASSNAME|  -----
 
 //--------------------------------------------------------------------------------------
@@ -254,7 +355,7 @@ const |CLASSNAME|<T>& |CLASSNAME|<T>::operator = ( const |CLASSNAME| &other )
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == cpp.template-function ==
 template <class T>
-<CURSOR>void |?TEMPALTE_FUNCTION_NAME| ( T param )
+void<CURSOR> |?TEMPALTE_FUNCTION_NAME| ( <+argument list+> )
 {
 	return ;
 }		// -----  end of template function |?TEMPALTE_FUNCTION_NAME|  -----
@@ -276,9 +377,9 @@ operator >> ( istream & is, |?CLASSNAME| & obj )
 }		// -----  end of function operator >>  -----
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == cpp.try-catch ==
-try {<CURSOR>
+try {
 <SPLIT>}
-catch ( const &ExceptObj ) {		// handle exception:
+catch ( const <CURSOR> &ExceptObj ) {		// handle exception:
 }
 catch (...) {		// handle exception: unspezified
 }
@@ -297,33 +398,49 @@ extern "C" {<CURSOR>
 <SPLIT>}
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == cpp.open-input-file ==
-char *ifs_file_name = "<CURSOR>";		// input  file name
-ifstream	ifs;							// create ifstream object
+string    ifs_file_name = "<CURSOR>";                 // input  file name
+ifstream  ifs;                                // create ifstream object
 
-ifs.open (ifs_file_name);		// open ifstream
+ifs.open ( ifs_file_name.c_str() );           // open ifstream
 if (!ifs) {
 	cerr << "\nERROR : failed to open input  file " << ifs_file_name << endl;
 	exit (EXIT_FAILURE);
 }
-
-
-ifs.close ();		// close ifstream
+<SPLIT>{-continue here-}
+ifs.close ();                                 // close ifstream
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 == cpp.open-output-file ==
-char *ofs_file_name = "<CURSOR>";		// output file name
-ofstream	ofs;							// create ofstream object
+string    ofs_file_name = "<CURSOR>";                 // input  file name
+ofstream  ofs;                                // create ofstream object
 
-ofs.open (ofs_file_name);		// open ofstream
+ofs.open ( ofs_file_name.c_str() );           // open ofstream
 if (!ofs) {
 	cerr << "\nERROR : failed to open output file " << ofs_file_name << endl;
 	exit (EXIT_FAILURE);
 }
-
-
-ofs.close ();		// close ofstream
+<SPLIT>{-continue here-}
+ofs.close ();                                 // close ofstream
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+== cpp.namespace-std ==
+using namespace std;
 == cpp.namespace ==
-namespace |?NAMESPACE|
-{<CURSOR>
-<SPLIT>}		// -----  end of |NAMESPACE|  name  -----
+using namespace |?NAMESPACE|;
+== cpp.namespace-block ==
+namespace |?NAMESPACE| {<CURSOR>
+<SPLIT>}		// -----  end of namespace |NAMESPACE|  -----
+$%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+== cpp.rtti-typeid == insert ==
+typeid(<CURSOR><SPLIT>)
+$
+== cpp.rtti-static-cast == insert ==
+static_cast<>(<CURSOR><SPLIT>)
+$
+== cpp.rtti-const-cast == insert ==
+const_cast<>(<CURSOR><SPLIT>)
+$
+== cpp.rtti-reinterpret-cast == insert ==
+reinterpret_cast<>(<CURSOR><SPLIT>)
+$
+== cpp.rtti-dynamic-cast == insert ==
+dynamic_cast<>(<CURSOR><SPLIT>)
 $%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
