update tmux's config file, add a local config example that does not work yet

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,32 @@
-# use vi mode in scroll mode and paste mode
-set-window-option mode-keys vi
+# vim: foldmethod=marker
 
+# {{{1 global options 
 # redefine the prefix key
 set -g prefix C-o
 unbind C-b
 bind o send-prefix
 
-# key bindings
+# }}}1
+
+# {{{1 key bindings
 bind C-o last-window
 
+bind -r k up-pane
+bind -r j down-pane
+bind -r = resize-pane-up
+bind -r - resize-pane-down
+bind -r C-k rotate-window
+bind -r C-j rotate-window -U
+
+bind -r C-n next-window
+bind -r C-p previous-window
+
+bind -r y next-layout
+bind A command-prompt "rename-window %%"
+
+#}}}1
+
+# {{{1 window options 
 # disable automatic window renaming
 setw -g automatic-rename off
 
@@ -17,7 +35,28 @@ setw -g utf8 on
 
 setw -g xterm-keys on
 
-# status bar
-set status-left '[#H:#S]'
-set status-right '%a %m/%d %H:%M'
+# use vi mode in scroll mode and paste mode
+setw -g mode-keys vi
 
+#setw -g mode-fg black 
+#setw -g mode-bg yellow
+#setw -g window-status-fg white
+#setw -g window-status-bg black
+
+
+# }}}1
+
+# {{{1 status bar
+set -g status-interval 5
+
+#set -g status-fg black 
+#set -g status-bg white
+#set -g message-fg black 
+#set -g message-bg white
+
+set -g status-left-length 16
+set -g status-left '[#14H:#S]'
+set -g status-right '%a %m/%d %H:%M'
+# }}}1
+
+#source-file '/Users/vincent/.tmux.conf.local'
