update some configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,15 +13,26 @@ bind C-o last-window
 
 bind -r k up-pane
 bind -r j down-pane
-bind -r = resize-pane-up
-bind -r - resize-pane-down
-bind -r C-k rotate-window
-bind -r C-j rotate-window -U
+bind -r = resize-pane -U 3
+bind -r - resize-pane -D 3
+
+#bind -r C-k rotate-window -U 
+#bind -r C-j rotate-window -D
+bind -r C-k swap-pane -U 
+bind -r C-j swap-pane -D
 
 bind -r C-n next-window
 bind -r C-p previous-window
 
 bind -r y next-layout
+bind o select-layout "active-only"
+bind O select-layout "main-vertical"
+
+bind '"' choose-window
+bind s split-window
+bind q kill-pane
+bind Q kill-window
+
 bind A command-prompt "rename-window %%"
 
 #}}}1
