update tmux config file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,13 +13,16 @@ bind C-o last-window
 
 bind -r k up-pane
 bind -r j down-pane
+bind -r C-k up-pane
+bind -r C-j down-pane
+
 bind -r = resize-pane -U 3
 bind -r - resize-pane -D 3
 
 #bind -r C-k rotate-window -U 
 #bind -r C-j rotate-window -D
-bind -r C-k swap-pane -U 
-bind -r C-j swap-pane -D
+bind -r K swap-pane -U 
+bind -r J swap-pane -D
 
 bind -r C-n next-window
 bind -r C-p previous-window
