update config file for tmux, add a script to start/connect tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,8 @@ set -g prefix C-o
 unbind C-b
 bind o send-prefix
 
+set -g status-bg cyan
+
 # }}}1
 
 # {{{1 key bindings
@@ -73,4 +75,4 @@ set -g status-left '[#14H:#S]'
 set -g status-right '%a %m/%d %H:%M'
 # }}}1
 
-#source-file '/Users/vincent/.tmux.conf.local'
+source-file '/Users/vincent/.tmux.conf.local'
