--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,6 +34,7 @@ bind o select-layout "active-only"
 bind O select-layout "main-vertical"
 
 bind '"' choose-window
+bind "'" choose-session
 bind s split-window
 bind q kill-pane
 bind Q kill-window
