tweak more options in .tmux.conf file, add load value, more colors, key-binding etc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ set -g prefix C-o
 unbind C-b
 bind o send-prefix
 
-set -g status-bg cyan
+set -g visual-content on
 
 # }}}1
 
@@ -41,6 +41,12 @@ bind Q kill-window
 
 bind A command-prompt "rename-window %%"
 
+bind m command-prompt "setw monitor-content %%"
+
+# bindings for vi-* mode
+bind -t vi-choice C-b page-up
+bind -t vi-copy   C-b page-up
+
 #}}}1
 
 # {{{1 window options 
@@ -60,10 +66,12 @@ setw -g mode-keys vi
 #setw -g window-status-fg white
 #setw -g window-status-bg black
 
+setw -g window-status-current-attr reverse
 
 # }}}1
 
 # {{{1 status bar
+set -g status-bg cyan
 set -g status-interval 5
 
 #set -g status-fg black 
@@ -72,8 +80,12 @@ set -g status-interval 5
 #set -g message-bg white
 
 set -g status-left-length 16
-set -g status-left '[#14H:#S]'
-set -g status-right '%a %m/%d %H:%M'
+set -g status-right-length 50
+set -g status-left '#[fg=magenta,bold][#14H:#S]#[default]'
+set -g status-right '|#[fg=magenta,bold]#(load.sh)#[default]| #[fg=yellow,bold][%a %m/%d %H:%M]#[default]'
+#set -g status-right '#[fg=yellow,bold]|#(uptime)|[%a %m/%d %H:%M]#[default]'
+
+#set -g status-keys vi
 # }}}1
 
 source-file '/Users/vincent/.tmux.conf.local'
