define more key-binding for layout of tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,11 +3,13 @@
 # {{{1 global options 
 # redefine the prefix key
 set -g prefix C-o
+set -g base-index 1
+
 unbind C-b
 bind o send-prefix
 
 set -g visual-content on
-
+set -g display-panes-time 1500
 # }}}1
 
 # {{{1 key bindings
@@ -35,9 +37,12 @@ bind O select-layout "main-vertical"
 
 bind '"' choose-window
 bind "'" choose-session
-bind s split-window
+bind s split-window -v
+bind S split-window -h
 bind q kill-pane
 bind Q kill-window
+
+bind i display-panes
 
 bind A command-prompt "rename-window %%"
 
@@ -67,6 +72,7 @@ setw -g mode-keys vi
 #setw -g window-status-bg black
 
 setw -g window-status-current-attr reverse
+
 
 # }}}1
 
