update config files for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,13 +3,14 @@
 # {{{1 global options 
 # redefine the prefix key
 set -g prefix C-o
-set -g base-index 1
+set -g base-index 0
+set -g bell-action none
 
 unbind C-b
 bind o send-prefix
 
 set -g visual-content on
-set -g display-panes-time 1500
+set -g display-panes-time 3000
 # }}}1
 
 # {{{1 key bindings
@@ -22,6 +23,9 @@ bind -r C-j down-pane
 
 bind -r = resize-pane -U 3
 bind -r - resize-pane -D 3
+bind -r h resize-pane -L 3
+unbind l
+bind -r l resize-pane -R 3
 
 #bind -r C-k rotate-window -U 
 #bind -r C-j rotate-window -D
@@ -32,13 +36,14 @@ bind -r C-n next-window
 bind -r C-p previous-window
 
 bind -r y next-layout
+
 bind o select-layout "active-only"
 bind O select-layout "main-vertical"
 
 bind '"' choose-window
 bind "'" choose-session
-bind s split-window -v
-bind S split-window -h
+bind s split-window -h
+bind S split-window -v
 bind q kill-pane
 bind Q kill-window
 
