--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,8 +37,8 @@ bind -r C-p previous-window
 
 bind -r y next-layout
 
-bind o select-layout "active-only"
-bind O select-layout "main-vertical"
+#bind o select-layout "active-only"
+#bind O select-layout "main-vertical"
 
 bind '"' choose-window
 bind "'" choose-session
