minor changes on tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,10 +16,10 @@ set -g display-panes-time 3000
 # {{{1 key bindings
 bind C-o last-window
 
-bind -r k up-pane
-bind -r j down-pane
-bind -r C-k up-pane
-bind -r C-j down-pane
+bind k up-pane
+bind j down-pane
+bind C-k up-pane
+bind C-j down-pane
 
 bind -r = resize-pane -U 3
 bind -r - resize-pane -D 3
