add git branch info to statusline; minor fixes

--- a/.vim_simple_rc
+++ b/.vim_simple_rc
@@ -126,3 +126,4 @@ runtime plugin/AsNeeded.vim
 runtime plugin/ANcmds.vim
 runtime plugin/foldutil.vim
 runtime plugin/AlignPlugin.vim
+runtime plugin/myplugin.vim
